Permition to view patient

--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="10dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <com.github.vipulasri.timelineview.TimelineView
         android:id="@+id/time_marker"
@@ -22,8 +23,10 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="10dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="5dp"
         android:layout_gravity="center_vertical"
-        app:cardElevation="1dp"
+
         app:contentPadding="15dp">
 
         <LinearLayout
