--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.appvie.appvie.TestActivity">
+    tools:context="com.appvie.appvie.TestActivity"
+    android:background="#d6d6d6">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
