--- a/app/src/main/res/layout/dialog_add_timeline.xml
+++ b/app/src/main/res/layout/dialog_add_timeline.xml
@@ -2,38 +2,90 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:background="#d6d6d6">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="5dp" />
+
 
     <TextView
         android:id="@+id/text"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000"
+        android:textSize="30dp"
         android:text="Adicionar"
         android:layout_toRightOf="@+id/image"/>
 
-    <Spinner
-        android:id="@+id/type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
-
-    </Spinner>
-
-    <Button
-        android:id="@+id/dialogButtonOK"
-        android:layout_width="100px"
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=" Ok "
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_below="@+id/image"
-        />
+        android:layout_marginTop="30dp">
+
+        <EditText
+
+            android:paddingLeft="50dp"
+            android:layout_width="310dp"
+            android:layout_gravity="center"
+            android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
+            android:hint="Tipo"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/CinzaEscuro"
+            android:textColorHint="@color/white"
+            android:background="@color/whiteaAlpha"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <EditText
+            android:paddingLeft="50dp"
+            android:layout_width="310dp"
+            android:layout_gravity="center"
+            android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
+            android:hint="Descrição"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/CinzaEscuro"
+            android:textColorHint="@color/white"
+            android:background="@color/whiteaAlpha"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_gravity="center"
+
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text=" Cancel "
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_below="@+id/image"
+            />
+
+        <Button
+            android:layout_gravity="center"
+            android:id="@+id/dialogButtonOK"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text=" Ok "
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_below="@+id/image"
+            />
+
+
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
